<resources>
    <string name="action_settings">Settings</string>
    <string name="action_add">New conversation</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_account">Manage account</string>
    <string name="action_end_conversation">Close conversation</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_muc_details">Group chat details</string>
    <string name="channel_details">Channel details</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to address book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="action_block_participant">Block participant</string>
    <string name="action_unblock_participant">Unblock participant</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_sharewith">Share with Conversation</string>
    <string name="title_activity_start_conversation">Start Conversation</string>
    <string name="title_activity_choose_contact">Choose Contact</string>
    <string name="title_activity_choose_contacts">Choose Contacts</string>
    <string name="title_activity_share_via_account">Share via account</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <plurals name="x_unread_conversations">
        <item quantity="one">%d unread conversation</item>
        <item quantity="other">%d unread conversations</item>

    </plurals>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="invalid_muc_nick">Invalid nickname</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your contact list? Conversations with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? Conversations with this bookmark will not be removed.</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="start_conversation">Start conversation</string>
    <string name="invite_contact">Invite contact</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">%1$s has crashed</string>
    <string name="crash_report_message">Using your XMPP account to send in stack traces helps the ongoing development of %1$s.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Could not connect to account</string>
    <string name="problem_connecting_to_accounts">Could not connect to multiple accounts</string>
    <string name="touch_to_fix">Tap to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">Add this missing contact to your contact list?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Getting ready to send image</string>
    <string name="preparing_images">Getting ready to send images</string>
    <string name="sharing_files_please_wait">Sharing files. Please wait…</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="clear_histor_msg">Do you want to delete all messages in this conversation?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_file_dialog">Delete file</string>
    <string name="delete_file_dialog_msg">Are you sure you want to delete this file?\n\n<b>Warning:</b> This will not delete copies of this file that are stored on other devices or servers. </string>
    <string name="also_end_conversation">Close this conversation afterwards</string>
    <string name="choose_presence">Choose device</string>
    <string name="send_unencrypted_message">Send unencrypted message</string>
    <string name="send_message">Send message</string>
    <string name="send_message_to_x">Send message to %s</string>
    <string name="send_omemo_message">Send OMEMO encrypted message</string>
    <string name="send_omemo_x509_message">Send v\\OMEMO encrypted message</string>
    <string name="send_pgp_message">Send OpenPGP encrypted message</string>
    <string name="your_nick_has_been_changed">New nickname in use</string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long"><![CDATA[%1$s uses <b>OpenKeychain</b> to encrypt and decrypt messages and manage your public keys.<br><br>It is licensed under GPLv3+ and available on F-Droid and Google Play.<br><br><small>(Please restart %1$s afterwards.)</small>]]></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="openkeychain_not_installed">Please install OpenKeychain</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">Could not encrypt your message because your contact is not announcing their public key.\n\n<small>Please ask your contact to set up OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="contacts_have_no_pgp_keys">Could not encrypt your message because your contacts are not announcing their public keys.\n\n<small>Please ask them to set up OpenPGP.</small></string>
    <string name="pref_general">General</string>
    <string name="pref_accept_files">Accept files</string>
    <string name="pref_accept_files_summary">Automatically accept files smaller than…</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_notification_settings">Notification</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="pref_notification_sound">Notification sound</string>
    <string name="pref_notification_sound_summary">Notification sound for new messages</string>
    <string name="pref_call_ringtone_summary">Ringtone for incoming calls</string>
    <string name="pref_notification_grace_period">Grace Period</string>
    <string name="pref_notification_grace_period_summary">The length of time notifications are silenced after detecting activity on one of your other devices.</string>
    <string name="pref_allow_screenshots_summary">Show app content in app switcher and allow screenshots to be taken</string>
    <string name="next">Next</string>
    <string name="pref_input_options">Input</string>
    <string name="pref_enter_is_send">Enter is send</string>
    <string name="pref_enter_is_send_summary">Use Enter (instead of Ctrl+Enter) to send message</string>
    <string name="account_settings_hostname">Hostname</string>
    <string name="account_settings_port">Port</string>
    <string name="pref_privacy">Privacy</string>
    <string name="pref_blind_trust_before_verification">Blind Trust Before Verification</string>
    <string name="pref_blind_trust_before_verification_summary">Trust new devices from non-verified contacts, but prompt manual confirmation of new devices for verified contacts.</string>
    <string name="pref_notifications_from_strangers">Notifications from strangers</string>
    <string name="pref_notifications_from_strangers_summary">Notify for messages and calls received from strangers.</string>
    <string name="pref_scroll_to_bottom">Scroll to bottom</string>
    <string name="pref_scroll_to_bottom_summary">Scroll down after sending a message</string>
    <string name="pref_omemo_setting">OMEMO Encryption</string>
    <string name="pref_omemo_setting_summary_default_on">OMEMO will be used by default for new conversations.</string>
    <string name="pref_message_notification_settings">Message notification settings</string>
    <string name="pref_more_notification_settings_summary">Importance, Sound, Vibrate</string>
    <string name="unified_push_distributor">UnifiedPush Distributor</string>
    <string name="all_chats">All chats</string>
    <string name="accounts">Accounts</string>
    <string name="spaces">Spaces</string>
    <string name="pref_title_interface">Interface</string>
    <string name="pref_summary_appearance">Theme, Colors, Screenshots, Input</string>
    <string name="pref_title_security">Security</string>
    <string name="pref_summary_security">Encryption, Blind Trust Before Verification, MIM Detection</string>
    <string name="unified_push_summary">Notification relay for UnifiedPush compatible third party apps</string>
    <string name="pref_dynamic_colors">Dynamic colors</string>
    <string name="pref_dynamic_colors_summary">System colors (Material You)</string>
    <string name="pref_light_dark_mode">Light/dark mode</string>
    <string name="appearance">Appearance</string>
    <string name="pref_allow_screenshots">Allow screenshots</string>
    <string name="pref_category_e2ee">End-to-end encryption</string>
    <string name="pref_category_server_connection">Server connection</string>
    <string name="detect_mim">Require channel binding</string>
    <string name="detect_mim_summary">Channel binding can detect some machine-in-the-middle attacks</string>
    <string name="use_opportunistic_tls">Opportunistic TLS (STARTTLS)</string>
    <string name="info_required">Info required</string>
</resources>