<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_category_e2ee">
        <ListPreference
            android:icon="@drawable/ic_lock_24dp"
            android:defaultValue="@string/omemo_setting_default"
            android:entries="@array/omemo_setting_entries"
            android:entryValues="@array/omemo_setting_entry_values"
            android:key="omemo"
            android:summary="@string/pref_omemo_setting_summary_default_on"
            android:title="@string/pref_omemo_setting" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_verified_user_24dp"
            android:defaultValue="@bool/btbv"
            android:key="btbv"
            android:summary="@string/pref_blind_trust_before_verification_summary"
            android:title="@string/pref_blind_trust_before_verification" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_server_connection">
        <SwitchPreferenceCompat android:title="@string/detect_mim"
            android:summary="@string/detect_mim_summary"
            android:key="channel_binding_required"/>
    </PreferenceCategory>

</PreferenceScreen>