<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019-2023 Daniel Gultsch
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:liftOnScroll="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/material_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/activity_setup"
                app:title="@string/app_name"
                app:titleCentered="true"
                app:titleTextColor="?colorPrimary" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="@{setupViewModel.isLoading() ? View.VISIBLE : View.INVISIBLE}" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:minHeight="@dimen/setup_main_min_height"
                android:orientation="vertical"
                android:padding="@dimen/setup_screen_padding">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/setup_screen_top_margin"
                    android:text="@string/info_required"
                    android:textAppearance="?textAppearanceTitleMedium" />

                <TextView
                    android:id="@+id/xmpp_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12sp"
                    android:drawablePadding="8sp"
                    android:text="@{setupViewModel.xmppAddress}"
                    android:textAppearance="?textAppearanceBodyMedium"
                    app:drawableStartCompat="@drawable/ic_account_circle_24dp"
                    tools:text="username@exmample.com" />

                <LinearLayout
                    android:layout_width="496dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/xmpp_address"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24sp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/hostname_input_layout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="5"
                            android:enabled="@{!setupViewModel.isLoading()}"
                            android:hint="@string/account_settings_hostname"
                            app:errorText="@{setupViewModel.hostnameError}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/hostname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="flagNoExtractUi|actionNext"
                                android:inputType="text|textNoSuggestions"
                                android:maxLines="1"
                                android:text="@={setupViewModel.hostname}"
                                app:editorAction="@{()->setupViewModel.submitHostname()}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/port_input_layout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="2"
                            android:enabled="@{!setupViewModel.isLoading()}"
                            android:hint="@string/account_settings_port"
                            app:errorText="@{setupViewModel.portError}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/port"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="flagNoExtractUi|actionNext"
                                android:inputType="number"
                                android:maxLines="1"
                                android:maxLength="5"
                                android:text="@={setupViewModel.port}"
                                app:editorAction="@{()->setupViewModel.submitHostname()}" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="8sp"
                        android:checked="@={setupViewModel.opportunisticTls}"
                        android:enabled="@{!setupViewModel.isLoading()}"
                        android:text="@string/use_opportunistic_tls"
                        tools:checked="true" />
                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:enabled="@{!setupViewModel.isLoading()}"
                    android:onClick="@{(v) -> setupViewModel.submitHostname()}"
                    android:text="@string/next" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <data>

        <import type="android.view.View" />

        <variable
            name="setupViewModel"
            type="im.conversations.android.ui.model.SetupViewModel" />
    </data>
</layout>